--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
 </head>
 <body>
     
+    <nav class="placeholder">nav</nav>
+    <header class="placeholder">header</header>
+
+    <div class="row">
+        <aside class="placeholder column">aside</aside>
+        <aside class="placeholder column">aside</aside>
+        </div>   
+    
+        <main class="placeholder">main</main>
+        <footer class="placeholder">footer</footer>
+
 </body>
 </html>
