--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,17 +8,32 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-    
-    <nav class="placeholder">nav</nav>
-    <header class="placeholder">header</header>
 
-    <div class="row">
-        <aside class="placeholder column">aside</aside>
-        <aside class="placeholder column">aside</aside>
-        </div>   
-        <main class="placeholder">main</main>
+<body>
+    <div class="container">
+        <nav class="placeholder">nav</nav>
+        <header class="placeholder">header</header>
+
+        <div class="row">
+            <article class="column">
+                <aside class="column row">
+                    <img src="./marguerite-729510__480.jpg" alt="" width="200">
+                </aside>
+            </article>
+            <article class="column">
+                <aside class="column row">
+                    <img src="./marguerite-729510__480.jpg" alt="" width="200">
+                </aside>
+            </article>
+        </div>
+        <main class="row">
+            <article class="placeholder column">article</article>
+            <article class="placeholder column">article</article>
+            <article class="placeholder column">article</article>
+        </main>
         <footer class="placeholder">footer</footer>
 
+        <div>
 </body>
+
 </html>
