--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <div class="row">
             <article class="column">
-                <aside class="column row">
+                <aside class=" row column">
                     <img src="./marguerite-729510__480.jpg" alt="" width="200">
                 </aside>
             </article>
             <article class="column">
-                <aside class="column row">
+                <aside class="row column">
                     <img src="./marguerite-729510__480.jpg" alt="" width="200">
                 </aside>
             </article>
